--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
 <body id="body">
 <div id="counter">0</div>
 <script>
-    const counter = document.getElementById('counter');
-    window.addEventListener('scroll', function (e) {
+    let score = 0;
+    const counterEl = document.getElementById('counter');
+    window.addEventListener('scroll', function () {
       const height = document.body.scrollHeight,
             newHeight = height + 1000;
+      score += Math.floor(Math.random()*height);
       document.body.style.height = newHeight + 'px';
-      counter.innerHTML = newHeight;
+      counterEl.innerHTML = score.toLocaleString('en-US');
     });
 </script>
 </body>
